--- a/src/playground/play.ipynb
+++ b/src/playground/play.ipynb
@@ -1740,10 +1740,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ergerg'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = \"ergerg.png\"\n",
+    "img.split(\".\")[0]"
+   ]
   },
   {
    "cell_type": "code",
