--- a/src/playground/play.ipynb
+++ b/src/playground/play.ipynb
@@ -1761,12 +1761,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.chdir(\"c:\\\\Users\\\\bohbot-lab\\\\git\\\\Mosquito_Supermodel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'src/tests/vids/test1/reduced_quality_video.mov'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# Define the input and output file paths\n",
+    "input_video_path = r'src/tests/vids/test1/vecteezy_four-people-group-of-happy-teenagers-raising-hands-jumping_6619202.mov'\n",
+    "output_video_path = r'src/tests/vids/test1/reduced_quality_video.mov'\n",
+    "\n",
+    "# Open the video file\n",
+    "cap = cv2.VideoCapture(input_video_path)\n",
+    "if not cap.isOpened():\n",
+    "    raise ValueError(\"Error opening video file. Please check the file path.\")\n",
+    "\n",
+    "# Get video properties\n",
+    "fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')  # Codec for the output video\n",
+    "\n",
+    "# Define the output video writer with reduced resolution (640x480)\n",
+    "out = cv2.VideoWriter(output_video_path, fourcc, fps, (640, 480))\n",
+    "\n",
+    "# Process each frame\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    # Resize the frame to 640x480\n",
+    "    resized_frame = cv2.resize(frame, (640, 480))\n",
+    "    \n",
+    "    # Write the resized frame to the output video\n",
+    "    out.write(resized_frame)\n",
+    "\n",
+    "# Release resources\n",
+    "cap.release()\n",
+    "out.release()\n",
+    "\n",
+    "output_video_path  # Return the path to the reduced quality video file\n"
    ]
   },
   {
