--- a/src/playground/play_copy.ipynb
+++ b/src/playground/play_copy.ipynb
@@ -2,201 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from plotnine import ggplot, aes, geom_boxplot, theme_classic, labs, geom_point\n",
-    "from src.utils.config import load_config\n",
-    "from src.utils.common import create_output_dir\n",
     "\n",
+    "class CSVManager:\n",
     "\n",
+    "    def __init__(self, input_dir, output_dir):\n",
+    "        \"\"\"\n",
+    "        Initializes the CSVManager class with the input and output directories.\n",
+    "        \"\"\"\n",
+    "        self.input_dir = input_dir\n",
+    "        self.output_dir = output_dir\n",
     "\n",
+    "        # Create output directory if it does not exist\n",
+    "        if not os.path.exists(self.output_dir):\n",
+    "            os.makedirs(self.output_dir)\n",
     "\n",
-    "class DurationVisits:\n",
-    "    def __init__(self, config_path=\"config.json\"):\n",
-    "        self.config = load_config(config_path)\n",
-    "        self.data_path = self.config['analyze'][\"csv_path\"]\n",
-    "        self.plot_path = self.config[\"analyze\"][\"output_dir\"]\n",
-    "        self.time_intervals = float(self.config[\"average_visits\"][\"time_intervals\"])\n",
-    "        self.fps = float(self.config[\"average_visits\"][\"fps\"])\n",
+    "    def get_csvs(self):\n",
+    "        \"\"\"\n",
+    "        Collects all CSV file paths from the input directory and its subdirectories.\n",
+    "        \"\"\"\n",
+    "        names = []\n",
+    "        for root, _, files in os.walk(self.input_dir, topdown=False):\n",
+    "            for name in files:\n",
+    "                if name.endswith(\".csv\"):\n",
+    "                    names.append(os.path.join(root, name))\n",
     "\n",
-    "    def load_data(self):\n",
-    "        return pd.read_csv(self.data_path)\n",
+    "        self.csvnames = names\n",
     "\n",
-    "    def calculate_Duration(self, df):\n",
+    "    def merge_csv(self):\n",
+    "        \"\"\"\n",
+    "        Merges all CSV files collected in get_csvs() into a single CSV file.\n",
+    "        \"\"\"\n",
+    "        if not hasattr(self, 'csvnames'):\n",
+    "            raise ValueError(\"CSV files have not been loaded. Run get_csvs() first.\")\n",
+    "\n",
+    "        merged_data = pd.DataFrame()\n",
+    "\n",
+    "        # Merge all CSV files into one DataFrame\n",
+    "        for file in self.csvnames:\n",
+    "                df = pd.read_csv(file)\n",
+    "                df['treatment'] = df['image_name'].apply(lambda x: x.split('_')[0])\n",
+    "                merged_data = pd.concat([merged_data, df], ignore_index=True)\n",
     "        \n",
-    "        # Calculate duration (in terms of frame indices) for each track_id\n",
-    "        track_durations = (\n",
-    "            df.groupby('track_id')\n",
-    "            .agg(\n",
-    "                min_idx=('image_idx', 'min'),\n",
-    "                max_idx=('image_idx', 'max'),\n",
-    "                image_name=('image_name', 'min')\n",
-    "            )\n",
-    "            .assign(duration=lambda df: df['max_idx'] - df['min_idx'])\n",
-    "            .reset_index()\n",
-    "            .rename(columns={'min_idx': 'min', 'max_idx': 'max', 'duration':'duration(frames)'})\n",
-    ")\n",
-    "        \n",
-    "        return track_durations\n",
     "\n",
-    "    def save_new_df(self, track_durations):\n",
-    "        \"\"\"\n",
-    "        Save the processed DataFrame to a CSV file.\n",
-    "        \"\"\"\n",
-    "        output_csv = os.path.join(self.plot_path, \"duration.csv\")\n",
-    "        create_output_dir(self.plot_path)  # Ensure the directory exists\n",
-    "        track_durations.to_csv(output_csv, index=False)\n",
-    "        print(f\"Results saved to {output_csv}\")\n",
-    "\n",
-    "    def plot_results(self, track_durations):\n",
-    "        \"\"\"\n",
-    "        Plot the trajectory counts as a barplot.\n",
-    "        \"\"\"\n",
-    "        plot = (\n",
-    "            ggplot(df, aes(x=\"image_name\", y=\"duration(frames)\"))\n",
-    "            + geom_boxplot()\n",
-    "            + geom_point(alpha=0.6)\n",
-    "            + theme_classic()\n",
-    "            + labs(\n",
-    "                title=f\"duration for each trajectory\",\n",
-    "                x=\"Treatment\",\n",
-    "                y=\"Duration (Frames)\",\n",
-    "            )\n",
-    "        )\n",
-    "        plot\n",
-    "\n",
-    "    def save_new_df(self, df):\n",
-    "        \"\"\"\n",
-    "        Save the processed DataFrame to a CSV file.\n",
-    "        \"\"\"\n",
-    "        output_csv = os.path.join(self.plot_path, \"duration.csv\")\n",
-    "        create_output_dir(self.plot_path)  # Ensure the directory exists\n",
-    "        df.to_csv(output_csv, index=False)\n",
-    "        print(f\"Results saved to {output_csv}\")\n",
-    "\n",
-    "    def _plot_results(self, df):\n",
-    "        \n",
-    "        plot = (\n",
-    "            ggplot(df, aes(x=\"image_name\", y=\"duration(frames)\"))\n",
-    "            + geom_boxplot()\n",
-    "            + geom_point(alpha=0.6)\n",
-    "            + theme_classic()\n",
-    "            + labs(\n",
-    "                title=f\"duration for each trajectory\",\n",
-    "                x=\"Treatment\",\n",
-    "                y=\"Duration (Frames)\",\n",
-    "            )\n",
-    "        )\n",
-    "\n",
-    "        output_path = os.path.join(self.plot_path, \"duration.png\")\n",
-    "        plot.save(output_path)\n",
-    "        print(f\"Plot saved to {output_path}\")\n",
+    "        # Save the merged DataFrame to the output directory\n",
+    "        output_file = os.path.join(self.output_dir, \"merged_results.csv\")\n",
+    "        merged_data.to_csv(output_file, index=False)\n",
+    "        print(f\"Merged CSV saved to {output_file}\")\n",
     "\n",
     "    def __call__(self):\n",
-    "        \n",
-    "        df = self._load_data()\n",
-    "        track_durations = self.calculate_Duration(df)\n",
-    "        self.save_new_df(track_durations)\n",
-    "        self._plot_results(track_durations)\n",
-    "\n",
-    "\n"
+    "        \"\"\"\n",
+    "        Executes the process of collecting and merging CSV files.\n",
+    "        \"\"\"\n",
+    "        print(\"Collecting CSV files...\")\n",
+    "        self.get_csvs()\n",
+    "        print(\"Merging CSV files...\")\n",
+    "        self.merge_csv()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = DurationVisits()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DurationVisits' object has no attribute '_load_data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[92], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mx\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[90], line 94\u001b[0m, in \u001b[0;36mDurationVisits.__call__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 94\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_load_data\u001b[49m()\n\u001b[0;32m     95\u001b[0m     track_durations \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculate_Duration(df)\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msave_new_df(track_durations)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DurationVisits' object has no attribute '_load_data'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting CSV files...\n",
+      "Merging CSV files...\n",
+      "Merged CSV saved to /home/bohbot/Evyatar/git/Mosquito_Supermodel/src/datasets/croped_movies/merged_results.csv\n"
      ]
     }
    ],
    "source": [
-    "x()"
+    "\n",
+    "dir = \"/home/bohbot/Evyatar/git/Mosquito_Supermodel/src/datasets/croped_movies\"\n",
+    "input_dir = dir\n",
+    "output_dir = dir\n",
+    "\n",
+    "# Create the CSVManager instance\n",
+    "csv_manager = CSVManager(input_dir, output_dir)\n",
+    "\n",
+    "# Call the instance to execute the process\n",
+    "csv_manager()\n",
+    "\n",
+    "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>track_id</th>\n",
-       "      <th>min</th>\n",
-       "      <th>max</th>\n",
-       "      <th>image_name</th>\n",
-       "      <th>duration(frames)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>367</td>\n",
-       "      <td>13413819-hd_1920_1080_30fps</td>\n",
-       "      <td>348</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   track_id  min  max                   image_name  duration(frames)\n",
-       "0       1.0   19  367  13413819-hd_1920_1080_30fps               348"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_du = x._calculate_Duration(df)\n",
-    "df_du"
+    "import plotnine as gg"
    ]
   },
   {
@@ -204,9 +118,7 @@
    "execution_count": 86,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "d = x._plot_results(df_du)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -291,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sp",
+   "display_name": "super_model",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
