--- a/src/playground/play.ipynb
+++ b/src/playground/play.ipynb
@@ -1827,6 +1827,66 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n.pt to 'yolo11n.pt'...\n",
+       "\n",
+       "Traceback (most recent call last):\n",
+       "  File \"/home/wildmosquit0/.vscode/extensions/ms-python.python-2024.22.1-linux-x64/python_files/python_server.py\", line 133, in exec_user_input\n",
+       "    retval = callable_(user_input, user_globals)\n",
+       "  File \"<string>\", line 5, in <module>\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/engine/model.py\", line 180, in __call__\n",
+       "    return self.predict(source, stream, **kwargs)\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/engine/model.py\", line 558, in predict\n",
+       "    return self.predictor.predict_cli(source=source) if is_cli else self.predictor(source=source, stream=stream)\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/engine/predictor.py\", line 173, in __call__\n",
+       "    return list(self.stream_inference(source, model, *args, **kwargs))  # merge list of Result into one\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/torch/utils/_contextlib.py\", line 36, in generator_context\n",
+       "    response = gen.send(None)\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/engine/predictor.py\", line 231, in stream_inference\n",
+       "    self.setup_source(source if source is not None else self.args.source)\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/engine/predictor.py\", line 203, in setup_source\n",
+       "    self.dataset = load_inference_source(\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/data/build.py\", line 187, in load_inference_source\n",
+       "    source, stream, screenshot, from_img, in_memory, tensor = check_source(source)\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/data/build.py\", line 162, in check_source\n",
+       "    source = autocast_list(source)  # convert all list elements to PIL or np arrays\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/ultralytics/data/loaders.py\", line 592, in autocast_list\n",
+       "    files.append(Image.open(requests.get(im, stream=True).raw if str(im).startswith(\"http\") else im))\n",
+       "  File \"/home/wildmosquit0/miniconda3/envs/sp/lib/python3.9/site-packages/PIL/Image.py\", line 3469, in open\n",
+       "    fp = builtins.open(filename, \"rb\")\n",
+       "FileNotFoundError: [Errno 2] No such file or directory: '/home/wildmosquit0/git/Mosquito_Supermodel/image1.jpg'\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "model = YOLO(\"yolo11n.pt\")  # pretrained YOLO11n model\n",
+    "\n",
+    "# Run batched inference on a list of images\n",
+    "results = model(\"0.jpg\")  # return a list of Results objects\n",
+    "\n",
+    "# Process results list\n",
+    "for result in results:\n",
+    "    boxes = result.boxes  # Boxes object for bounding box outputs\n",
+    "    masks = result.masks  # Masks object for segmentation masks outputs\n",
+    "    keypoints = result.keypoints  # Keypoints object for pose outputs\n",
+    "    probs = result.probs  # Probs object for classification outputs\n",
+    "    obb = result.obb  # Oriented boxes object for OBB outputs\n",
+    "    result.show()  # display to screen\n",
+    "    result.save(filename=\"result.jpg\")  # save to disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
