filter time interval and prelimeneri sahi

--- a/src/playground/play_copy.ipynb
+++ b/src/playground/play_copy.ipynb
@@ -15,63 +15,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
-    "class CSVManager:\n",
-    "\n",
-    "    def __init__(self, input_dir, output_dir):\n",
-    "        \"\"\"\n",
-    "        Initializes the CSVManager class with the input and output directories.\n",
-    "        \"\"\"\n",
-    "        self.input_dir = input_dir\n",
-    "        self.output_dir = output_dir\n",
-    "\n",
-    "        # Create output directory if it does not exist\n",
-    "        if not os.path.exists(self.output_dir):\n",
-    "            os.makedirs(self.output_dir)\n",
-    "\n",
-    "    def get_csvs(self):\n",
-    "        \"\"\"\n",
-    "        Collects all CSV file paths from the input directory and its subdirectories.\n",
-    "        \"\"\"\n",
-    "        names = []\n",
-    "        for root, _, files in os.walk(self.input_dir, topdown=False):\n",
-    "            for name in files:\n",
-    "                if name.endswith(\".csv\"):\n",
-    "                    names.append(os.path.join(root, name))\n",
-    "\n",
-    "        self.csvnames = names\n",
-    "\n",
-    "    def merge_csv(self):\n",
-    "        \"\"\"\n",
-    "        Merges all CSV files collected in get_csvs() into a single CSV file.\n",
-    "        \"\"\"\n",
-    "        if not hasattr(self, 'csvnames'):\n",
-    "            raise ValueError(\"CSV files have not been loaded. Run get_csvs() first.\")\n",
-    "\n",
-    "        merged_data = pd.DataFrame()\n",
-    "\n",
-    "        # Merge all CSV files into one DataFrame\n",
-    "        for file in self.csvnames:\n",
-    "                df = pd.read_csv(file)\n",
-    "                df['treatment'] = df['image_name'].apply(lambda x: x.split('_')[0])\n",
-    "                merged_data = pd.concat([merged_data, df], ignore_index=True)\n",
-    "        \n",
-    "\n",
-    "        # Save the merged DataFrame to the output directory\n",
-    "        output_file = os.path.join(self.output_dir, \"merged_results.csv\")\n",
-    "        merged_data.to_csv(output_file, index=False)\n",
-    "        print(f\"Merged CSV saved to {output_file}\")\n",
-    "\n",
-    "    def __call__(self):\n",
-    "        \"\"\"\n",
-    "        Executes the process of collecting and merging CSV files.\n",
-    "        \"\"\"\n",
-    "        print(\"Collecting CSV files...\")\n",
-    "        self.get_csvs()\n",
-    "        print(\"Merging CSV files...\")\n",
-    "        self.merge_csv()\n"
+    "import os/n",
+    "import pandas as pd/n",
+    "/n",
+    "class CSVManager:/n",
+    "/n",
+    "    def __init__(self, input_dir, output_dir):/n",
+    "        /"/"/"/n",
+    "        Initializes the CSVManager class with the input and output directories./n",
+    "        /"/"/"/n",
+    "        self.input_dir = input_dir/n",
+    "        self.output_dir = output_dir/n",
+    "/n",
+    "        # Create output directory if it does not exist/n",
+    "        if not os.path.exists(self.output_dir):/n",
+    "            os.makedirs(self.output_dir)/n",
+    "/n",
+    "    def get_csvs(self):/n",
+    "        /"/"/"/n",
+    "        Collects all CSV file paths from the input directory and its subdirectories./n",
+    "        /"/"/"/n",
+    "        names = []/n",
+    "        for root, _, files in os.walk(self.input_dir, topdown=False):/n",
+    "            for name in files:/n",
+    "                if name.endswith(/".csv/"):/n",
+    "                    names.append(os.path.join(root, name))/n",
+    "/n",
+    "        self.csvnames = names/n",
+    "/n",
+    "    def merge_csv(self):/n",
+    "        /"/"/"/n",
+    "        Merges all CSV files collected in get_csvs() into a single CSV file./n",
+    "        /"/"/"/n",
+    "        if not hasattr(self, 'csvnames'):/n",
+    "            raise ValueError(/"CSV files have not been loaded. Run get_csvs() first./")/n",
+    "/n",
+    "        merged_data = pd.DataFrame()/n",
+    "/n",
+    "        # Merge all CSV files into one DataFrame/n",
+    "        for file in self.csvnames:/n",
+    "                df = pd.read_csv(file)/n",
+    "                df['treatment'] = df['image_name'].apply(lambda x: x.split('_')[0])/n",
+    "                merged_data = pd.concat([merged_data, df], ignore_index=True)/n",
+    "        /n",
+    "/n",
+    "        # Save the merged DataFrame to the output directory/n",
+    "        output_file = os.path.join(self.output_dir, /"merged_results.csv/")/n",
+    "        merged_data.to_csv(output_file, index=False)/n",
+    "        print(f/"Merged CSV saved to {output_file}/")/n",
+    "/n",
+    "    def __call__(self):/n",
+    "        /"/"/"/n",
+    "        Executes the process of collecting and merging CSV files./n",
+    "        /"/"/"/n",
+    "        print(/"Collecting CSV files.../")/n",
+    "        self.get_csvs()/n",
+    "        print(/"Merging CSV files.../")/n",
+    "        self.merge_csv()/n"
    ]
   },
   {
@@ -83,24 +83,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting CSV files...\n",
-      "Merging CSV files...\n",
-      "Merged CSV saved to /home/bohbot/Evyatar/git/Mosquito_Supermodel/src/datasets/croped_movies/merged_results.csv\n"
+      "Collecting CSV files.../n",
+      "Merging CSV files.../n",
+      "Merged CSV saved to /home/bohbot/Evyatar/git/Mosquito_Supermodel/src/datasets/croped_movies/merged_results.csv/n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "dir = \"/home/bohbot/Evyatar/git/Mosquito_Supermodel/src/datasets/croped_movies\"\n",
-    "input_dir = dir\n",
-    "output_dir = dir\n",
-    "\n",
-    "# Create the CSVManager instance\n",
-    "csv_manager = CSVManager(input_dir, output_dir)\n",
-    "\n",
-    "# Call the instance to execute the process\n",
-    "csv_manager()\n",
-    "\n",
+    "/n",
+    "dir = /"/home/bohbot/Evyatar/git/Mosquito_Supermodel/src/datasets/croped_movies/"/n",
+    "input_dir = dir/n",
+    "output_dir = dir/n",
+    "/n",
+    "# Create the CSVManager instance/n",
+    "csv_manager = CSVManager(input_dir, output_dir)/n",
+    "/n",
+    "# Call the instance to execute the process/n",
+    "csv_manager()/n",
+    "/n",
     "      "
    ]
   },
@@ -148,17 +148,17 @@
     }
    ],
    "source": [
-    "plot = (\n",
-    "            ggplot(df_du, aes(x=\"image_name\", y=\"duration(frames)\"))\n",
-    "            + geom_boxplot()\n",
-    "            + geom_point(alpha=0.6)\n",
-    "            + theme_classic()\n",
-    "            + labs(\n",
-    "                title=f\"duration for each trajectory\",\n",
-    "                x=\"Treatment\",\n",
-    "                y=\"Duration (Frames)\",\n",
-    "            )\n",
-    "        )\n",
+    "plot = (/n",
+    "            ggplot(df_du, aes(x=/"image_name/", y=/"duration(frames)/"))/n",
+    "            + geom_boxplot()/n",
+    "            + geom_point(alpha=0.6)/n",
+    "            + theme_classic()/n",
+    "            + labs(/n",
+    "                title=f/"duration for each trajectory/",/n",
+    "                x=/"Treatment/",/n",
+    "                y=/"Duration (Frames)/",/n",
+    "            )/n",
+    "        )/n",
     "plot"
    ]
   },
@@ -168,29 +168,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from plotnine import ggplot, aes, geom_boxplot, geom_jitter, theme_classic, labs\n",
-    "\n",
-    "# Create sample data\n",
-    "data = {'image_name': ['img1', 'img2', 'img3', 'img1', 'img2', 'img3'],\n",
-    "        'trajectory_count': [10, 20, 15, 12, 18, 17]}\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Plot with plotnine\n",
-    "plot = (\n",
-    "    ggplot(df, aes(x=\"image_name\", y=\"trajectory_count\"))\n",
-    "    + geom_boxplot()\n",
-    "    + geom_jitter(alpha=0.6)\n",
-    "    + theme_classic()\n",
-    "    + labs(\n",
-    "        title=\"Trajectory Counts Per Image\",\n",
-    "        x=\"Image Name\",\n",
-    "        y=\"Trajectory Count\"\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "# Display the plot\n",
-    "plot\n"
+    "import pandas as pd/n",
+    "from plotnine import ggplot, aes, geom_boxplot, geom_jitter, theme_classic, labs/n",
+    "/n",
+    "# Create sample data/n",
+    "data = {'image_name': ['img1', 'img2', 'img3', 'img1', 'img2', 'img3'],/n",
+    "        'trajectory_count': [10, 20, 15, 12, 18, 17]}/n",
+    "df = pd.DataFrame(data)/n",
+    "/n",
+    "# Plot with plotnine/n",
+    "plot = (/n",
+    "    ggplot(df, aes(x=/"image_name/", y=/"trajectory_count/"))/n",
+    "    + geom_boxplot()/n",
+    "    + geom_jitter(alpha=0.6)/n",
+    "    + theme_classic()/n",
+    "    + labs(/n",
+    "        title=/"Trajectory Counts Per Image/",/n",
+    "        x=/"Image Name/",/n",
+    "        y=/"Trajectory Count/"/n",
+    "    )/n",
+    ")/n",
+    "/n",
+    "# Display the plot/n",
+    "plot/n"
    ]
   },
   {
