done slicing and visualization

--- a/src/playground/slicing.ipynb
+++ b/src/playground/slicing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,11 +42,16 @@
     "from concurrent.futures import ThreadPoolExecutor\n",
     "import shutil\n",
     "import multiprocessing\n",
+    "from sahi.utils.coco import Coco\n",
+    "\n",
     "import tempfile\n",
     "from tqdm import tqdm\n",
+    "from dask import bag as db\n",
     "\n",
     "import json\n",
     "import cv2\n",
+    "import uuid\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "from multiprocessing import Pool"
@@ -61,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,13 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "coco_annotations_path = f\"{batch_output_directory.replace('/images','/coco')}\"\n",
     "sliced_images_path = f\"{batch_output_directory.replace('/images','/sliced')}\"\n",
-    "temp_image_dir = f\"{batch_output_directory.replace('/images','/temp_processing')}\""
+    "temp_image_dir = f\"{batch_output_directory.replace('/images','/temp_processing')}\"\n",
+    "yolo_format_dir = f\"{batch_output_directory.replace('/images','/yolo_format')}\""
    ]
   },
   {
@@ -346,28 +352,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 71%|███████   | 6915/9779 [08:30<03:06, 15.36it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dask import bag as db\n",
+    "def split_coco(coco_path):\n",
+    "    with open(coco_path, \"r\") as f:\n",
+    "        data = json.load(f)\n",
+    "    m = {}\n",
+    "    for img in data[\"images\"]:\n",
+    "        m[img[\"file_name\"]] = {\n",
+    "            \"images\": [img],\n",
+    "            \"annotations\": [],\n",
+    "            \"categories\": data.get(\"categories\", [])\n",
+    "        }\n",
+    "    d = {img[\"id\"]: img[\"file_name\"] for img in data[\"images\"]}\n",
+    "    for ann in data[\"annotations\"]:\n",
+    "        fn = d[ann[\"image_id\"]]\n",
+    "        m[fn][\"annotations\"].append(ann)\n",
+    "    return m\n",
     "\n",
-    "def process_file(image_file):\n",
+    "def process_file(args):\n",
+    "    f, splitted, sliced_dir = args\n",
+    "    name = Path(f).name\n",
+    "    if name not in splitted:\n",
+    "        return f\n",
+    "    o = os.path.join(sliced_dir, Path(f).stem)\n",
+    "    a = os.path.join(o, f\"{Path(f).stem}_sliced_annotations.json\")\n",
+    "    if os.path.exists(o) and os.path.exists(a):\n",
+    "        return None\n",
+    "    t = os.path.join(sliced_dir, f\"temp_processing_{uuid.uuid4()}\")\n",
     "    try:\n",
+    "        os.makedirs(t, exist_ok=True)\n",
+    "        local_coco = os.path.join(t, \"annotation.json\")\n",
+    "        with open(local_coco, \"w\") as w:\n",
+    "            json.dump(splitted[name], w)\n",
+    "        shutil.copy(f, t)\n",
     "        slice_coco(\n",
-    "            coco_annotation_file_path=json_out,\n",
-    "            image_dir=batch_output_directory,\n",
-    "            output_coco_annotation_file_name=\"sliced_annotations\",\n",
+    "            coco_annotation_file_path=local_coco,\n",
+    "            image_dir=t,\n",
+    "            output_coco_annotation_file_name=f\"{Path(f).stem}_sliced_annotations\",\n",
     "            ignore_negative_samples=False,\n",
-    "            output_dir=sliced_dir,\n",
+    "            output_dir=o,\n",
     "            slice_height=640,\n",
     "            slice_width=640,\n",
     "            overlap_height_ratio=0.2,\n",
@@ -376,18 +402,51 @@
     "            verbose=False\n",
     "        )\n",
     "    except Exception:\n",
-    "        return image_file\n",
+    "        return f\n",
+    "    finally:\n",
+    "        if os.path.exists(t):\n",
+    "            shutil.rmtree(t)\n",
     "    return None\n",
     "\n",
-    "image_files = [f for f in glob.iglob(f\"{batch_output_directory}/*\") if 'txt' not in f]\n",
-    "\n",
-    "missing_files = db.from_sequence(image_files, npartitions=8).map(process_file).compute()\n",
-    "\n",
-    "missing_files = [file for file in missing_files if file]\n",
-    "\n",
-    "if missing_files:\n",
-    "    with open(\"missing_files.log\", \"w\") as log_file:\n",
-    "        log_file.write(\"\\n\".join(missing_files))\n"
+    "def run_processing(batch_output_directory, sliced_dir, coco_file, processes=4):\n",
+    "    splitted = split_coco(coco_file)\n",
+    "    image_files = [\n",
+    "        x for x in glob.iglob(os.path.join(batch_output_directory, \"*\"))\n",
+    "        if not x.lower().endswith(\".txt\")\n",
+    "    ]\n",
+    "    with Pool(processes=processes) as p:\n",
+    "        r = p.map(\n",
+    "            process_file,\n",
+    "            [(f, splitted, sliced_dir) for f in image_files]\n",
+    "        )\n",
+    "    m = [x for x in r if x]\n",
+    "    if m:\n",
+    "        with open(\"missing_files.log\", \"w\") as w:\n",
+    "            w.write(\"\\n\".join(m))\n",
+    "    return m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_files = run_processing(\n",
+    "    batch_output_directory,\n",
+    "    sliced_dir,\n",
+    "    json_out,\n",
+    "    processes=os.cpu_count()-2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sliced_dir"
    ]
   },
   {
@@ -399,27 +458,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _process_folder(args):\n",
+    "    folder_name, batch_output_directory, source_directory = args\n",
+    "    batch_path = os.path.join(batch_output_directory, folder_name)\n",
+    "    if not os.path.isdir(batch_path):\n",
+    "        return\n",
+    "    sliced_coco_path = os.path.join(\n",
+    "        batch_path, f\"{os.path.basename(batch_path)}_sliced_annotations_coco.json\"\n",
+    "    )\n",
+    "    if not os.path.exists(sliced_coco_path):\n",
+    "        return\n",
+    "    coco = Coco.from_coco_dict_or_path(sliced_coco_path, image_dir=batch_path)\n",
+    "    coco.export_as_yolov5(\n",
+    "        output_dir=source_directory,\n",
+    "        train_split_rate=1,\n",
+    "        disable_symlink=True\n",
+    "    )\n",
+    "\n",
+    "def export_all_sliced_to_yolo(batch_output_directory, source_directory, processes=4):\n",
+    "    folders = sorted(os.listdir(batch_output_directory))\n",
+    "    with Pool(processes=processes) as pool:\n",
+    "        pool.map(\n",
+    "            _process_folder,\n",
+    "            [(f, batch_output_directory, source_directory) for f in folders]\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sahi.utils.coco import Coco\n",
-    "\n",
-    "for i in sorted(os.listdir(batch_output_directory)):\n",
-    "  batch = os.path.join(batch_output_directory,i)\n",
-    "    \n",
-    "  sliced_dir = os.path.join(batch,\"sliced/\")\n",
-    "  print(sliced_dir)\n",
-    "  json_sliced = os.path.join(sliced_dir,\"sliced_coco.json\")\n",
-    "  # init Coco object\n",
-    "  coco = Coco.from_coco_dict_or_path(json_sliced, image_dir=sliced_dir)\n",
-    "\n",
-    "  # export converted YoloV5 formatted dataset into given output_dir with a 85% train/15% val split\n",
-    "  coco.export_as_yolov5(\n",
-    "    output_dir=os.path.join(source_directory,\"sliced_images_with_yolo_format\"),\n",
-    "    train_split_rate=1,\n",
-    "      disable_symlink=True\n",
-    "  )\n"
+    "export_all_sliced_to_yolo(sliced_dir, yolo_format_dir, processes=os.cpu_count()-5)"
    ]
   },
   {
@@ -431,27 +506,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f, axarr = plt.subplots(4, 5, figsize=(13,13))\n",
-    "img_ind = 0\n",
-    "for row_ind in range(4):\n",
-    "    for column_ind in range(5):\n",
-    "        # read image\n",
-    "        img = Image.open(\"demo_data/sliced/\" + coco_dict[\"images\"][img_ind][\"file_name\"]).convert('RGBA')\n",
-    "        # iterate over all annotations\n",
-    "        for ann_ind in range(len(coco_dict[\"annotations\"])):\n",
-    "            # find annotations that belong the selected image\n",
-    "            if coco_dict[\"annotations\"][ann_ind][\"image_id\"] == coco_dict[\"images\"][img_ind][\"id\"]:\n",
-    "                # convert coco bbox to pil bbox\n",
-    "                xywh = coco_dict[\"annotations\"][ann_ind][\"bbox\"]\n",
-    "                xyxy = [xywh[0], xywh[1], xywh[0]+xywh[2], xywh[1]+xywh[3]]\n",
-    "                # visualize bbox over image\n",
-    "                ImageDraw.Draw(img, 'RGBA').rectangle(xyxy, width=5)\n",
-    "            axarr[row_ind, column_ind].imshow(img)\n",
-    "        img_ind += 1\n"
+    "import os\n",
+    "import random\n",
+    "from pathlib import Path\n",
+    "from PIL import Image, ImageDraw\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_random_images_with_yolo_annotations(source_directory, num_images=5):\n",
+    "    image_files = []\n",
+    "    for f in os.listdir(source_directory):\n",
+    "        if f.lower().endswith((\".png\", \".jpg\", \".jpeg\")):\n",
+    "            image_files.append(os.path.join(source_directory, f))\n",
+    "\n",
+    "    if not image_files:\n",
+    "        print(\"No images found in:\", source_directory)\n",
+    "        return\n",
+    "    \n",
+    "    selected_images = random.sample(image_files, min(num_images, len(image_files)))\n",
+    "\n",
+    "    fig, axes = plt.subplots(1, len(selected_images), figsize=(16, 5))\n",
+    "    if len(selected_images) == 1:\n",
+    "        axes = [axes]\n",
+    "\n",
+    "    for ax, img_path in zip(axes, selected_images):\n",
+    "        img = Image.open(img_path)\n",
+    "        draw = ImageDraw.Draw(img)\n",
+    "        width, height = img.size\n",
+    "\n",
+    "        label_path = os.path.splitext(img_path)[0] + \".txt\"\n",
+    "        if os.path.exists(label_path):\n",
+    "            with open(label_path, \"r\") as f:\n",
+    "                for line in f:\n",
+    "                    parts = line.strip().split()\n",
+    "                    if len(parts) != 5:\n",
+    "                        continue\n",
+    "                    cat_id = parts[0]\n",
+    "                    x_c, y_c, w, h = map(float, parts[1:])\n",
+    "                    x1 = int((x_c - w / 2) * width)\n",
+    "                    y1 = int((y_c - h / 2) * height)\n",
+    "                    x2 = int((x_c + w / 2) * width)\n",
+    "                    y2 = int((y_c + h / 2) * height)\n",
+    "                    draw.rectangle([x1, y1, x2, y2], outline=\"red\", width=2)\n",
+    "                    draw.text((x1, y1), f\"Class {cat_id}\", fill=\"red\")\n",
+    "\n",
+    "        ax.imshow(img)\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -459,7 +565,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_random_images_with_yolo_annotations(f\"{yolo_format_dir}/train\", num_images=5)"
+   ]
   },
   {
    "cell_type": "code",
