--- a/src/playground/slicing.ipynb
+++ b/src/playground/slicing.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,10 +571,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_dataset_dir = f\"{batch_output_directory.replace('/images','/full_dataset')}\"\n",
+    "os.makedirs(full_dataset_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.system(f\"cp -r {yolo_format_dir}/train {full_dataset_dir}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(f\"cd {full_dataset_dir} && rsync -a --remove-source-files train/ . > /dev/null 2>&1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir(f\"{full_dataset_dir}/train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(f\"cp -r {images_train_source} {full_dataset_dir}\")\n",
+    "os.system(f\"cp -r {images_val_source} {full_dataset_dir}\")\n",
+    "os.system(f\"cp -r {labels_train_source} {full_dataset_dir}\")\n",
+    "os.system(f\"cp -r {labels_val_source} {full_dataset_dir}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(f\"cd {full_dataset_dir} && rsync -a --remove-source-files train/ . > /dev/null 2>&1\")\n",
+    "os.system(f\"cd {full_dataset_dir} && rsync -a --remove-source-files val/ . > /dev/null 2>&1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir(f\"{full_dataset_dir}/train\")\n",
+    "os.rmdir(f\"{full_dataset_dir}/val\")"
+   ]
   }
  ],
  "metadata": {
