--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "    recoding_frames = int(duration_sec * fps)  # Ensure it's an integer\n",
     "\n",
     "    if position == \"b\":\n",
-    "        start_frame = 0\n",
+    "        start_frame = 37000\n",
     "    elif position == \"m\":\n",
     "        start_frame = int((total_duration / 2 - duration_sec / 2) * fps)\n",
     "    elif position == \"e\":\n",
@@ -28,8 +28,10 @@
     "        raise ValueError(\"Invalid position. Choose from 'b', 'm', or 'e'.\")\n",
     "    \n",
     "    root = os.path.dirname(input_file)\n",
+    "    base = os.path.basename(input_file).split('.')[0]\n",
+    "    \n",
     "\n",
-    "    output_file = f\"{root}/cropped_{position}.mp4\"\n",
+    "    output_file = f\"{root}/{base}_cropped_{position}.mp4\"     \n",
     "    \n",
     "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
     "    out = cv2.VideoWriter(output_file, fourcc, fps, \n",
@@ -53,20 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropped video saved as /home/wildmosquit0/git/model_exp/peerscropped_m.mp4\n"
+      "Cropped video saved as /home/wildmosquit0/git/model_exp/peers/2021-10-22_16-35-35_cropped_b.mp4\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"/home/wildmosquit0/git/model_exp/peers/2023-07-07_10-47-35.mp4\"\n",
-    "position = \"m\"  # Choose from 'b','m', or 'e'\n",
+    "input_file = \"/home/wildmosquit0/git/model_exp/peers/2021-10-22_16-35-35.mov\"\n",
+    "position = \"b\"  # Choose from 'b','m', or 'e'\n",
     "duration = 0.5  # Duration in minutes\n",
     "crop_video(input_file, position, duration)"
    ]
@@ -77,27 +79,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = os.path.dirname(input_file)"
+    "root = os.path.(input_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/wildmosquit0/git/model_exp/peers'"
+       "'/home/wildmosquit0/git/model_exp/peers/2019-06-06_14-00-30_cropped_m.mp4'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "root"
+    "root = os.path.dirname(input_file)\n",
+    "base = os.path.basename(input_file).split('.')[0]\n",
+    "f\"{root}/{base}_cropped_{position}.mp4\""
    ]
   },
   {
