sliced is added to the yolo task

--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "    recoding_frames = int(duration_sec * fps)  # Ensure it's an integer\n",
     "\n",
     "    if position == \"b\":\n",
-    "        start_frame = 37000\n",
+    "        start_frame = 0\n",
     "    elif position == \"m\":\n",
     "        start_frame = int((total_duration / 2 - duration_sec / 2) * fps)\n",
     "    elif position == \"e\":\n",
@@ -55,19 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropped video saved as /home/wildmosquit0/git/model_exp/peers/2021-10-22_16-35-35_cropped_b.mp4\n"
+      "Cropped video saved as /home/wildmosquit0/git/model_exp/peers/20240304_1_cropped_b.mp4\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"/home/wildmosquit0/git/model_exp/peers/2021-10-22_16-35-35.mov\"\n",
+    "input_file = \"/home/wildmosquit0/git/model_exp/peers/20240304_1.mp4\"\n",
     "position = \"b\"  # Choose from 'b','m', or 'e'\n",
     "duration = 0.5  # Duration in minutes\n",
     "crop_video(input_file, position, duration)"
