added heatmap to analize pipeline

--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,21 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropped video saved as /home/wildmosquit0/git/model_exp/peers/20240304_1_cropped_b.mp4\n"
+      "Cropped video saved as /home/wildmosquit0/git/model_exp/peers/C3_R1_cropped_b.mp4\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"/home/wildmosquit0/git/model_exp/peers/20240304_1.mp4\"\n",
+    "input_file = \"/home/wildmosquit0/git/model_exp/peers/C3_R1.avi\"\n",
     "position = \"b\"  # Choose from 'b','m', or 'e'\n",
-    "duration = 0.5  # Duration in minutes\n",
+    "duration = 5  # Duration in minutes\n",
     "crop_video(input_file, position, duration)"
    ]
   },
