--- a/src/playground/crop_640X640_frame.ipynb
+++ b/src/playground/crop_640X640_frame.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'input_images'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 107\u001b[0m\n\u001b[1;32m    103\u001b[0m             file\u001b[38;5;241m.\u001b[39mwritelines(new_annotations)\n\u001b[1;32m    106\u001b[0m \u001b[38;5;66;03m# Loop through all images in the folder\u001b[39;00m\n\u001b[0;32m--> 107\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_folder\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m    108\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    109\u001b[0m         \u001b[38;5;66;03m# File paths\u001b[39;00m\n\u001b[1;32m    110\u001b[0m         image_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(input_folder, filename)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'input_images'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +163,7 @@
      "text": [
       "Select a ROI and then press SPACE or ENTER button!\n",
       "Cancel the selection process by pressing c button!\n",
-      "Cropped video saved at: /home/bohbot/Evyatar/exp/Joni_showoff/joni_640.mp4\n"
+      "Cropped video saved at: /home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni_640.mp4\n"
      ]
     }
    ],
@@ -206,8 +218,8 @@
     "    print(f\"Cropped video saved at: {output_path}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    input_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/predict/joni.mp4\"\n",
-    "    output_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/joni_640.mp4\"\n",
+    "    input_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni.mp4\"\n",
+    "    output_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni_640.mp4\"\n",
     "    crop_video(input_video, output_video)\n"
    ]
   },
