--- a/src/playground/crop_movie.ipynb
+++ b/src/playground/crop_movie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "    recoding_frames = int(duration_sec * fps)  # Ensure it's an integer\n",
     "\n",
     "    if position == \"b\":\n",
-    "        start_frame = 0\n",
+    "        start_frame = 4000\n",
     "    elif position == \"m\":\n",
     "        start_frame = int((total_duration / 2 - duration_sec / 2) * fps)\n",
     "    elif position == \"e\":\n",
@@ -55,19 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cropped video saved as /home/wildmosquit0/git/model_exp/peers/C3_R1_cropped_b.mp4\n"
+      "Cropped video saved as /home/bohbot/Evyatar/exp/Joni_showoff/nectar/full movies/2024-01-29_16-22-42_cam1_cropped_b.mp4\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"/home/wildmosquit0/git/model_exp/peers/C3_R1.avi\"\n",
+    "input_file = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/full movies/2024-01-29_16-22-42_cam1.mp4\"\n",
     "position = \"b\"  # Choose from 'b','m', or 'e'\n",
     "duration = 5  # Duration in minutes\n",
     "crop_video(input_file, position, duration)"
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sp39",
+   "display_name": "super_model",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
