--- a/src/playground/downscale_vid.ipynb
+++ b/src/playground/downscale_vid.ipynb
@@ -76,11 +76,82 @@
     "output_video_path = 'output_video.mp4'\n",
     "scale_factor = 0.5  # Set scaling factor (e.g., 0.5 to reduce size by half)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video processing complete. Saved as /home/bohbot/Evyatar/exp/Joni_showoff/predict/BF_640X2.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "\n",
+    "def speed_up_video(input_path, output_path, speed_factor=2):\n",
+    "    # Open the video file\n",
+    "    cap = cv2.VideoCapture(input_path)\n",
+    "    \n",
+    "    if not cap.isOpened():\n",
+    "        print(\"Error: Cannot open video file.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Get original video properties\n",
+    "    fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "    width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    frame_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    \n",
+    "    # Define codec and create VideoWriter object\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')  # Change codec if needed\n",
+    "    out = cv2.VideoWriter(output_path, fourcc, fps * speed_factor, (width, height))\n",
+    "    \n",
+    "    frame_idx = 0\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        \n",
+    "        # Write every second frame to double the speed\n",
+    "        if frame_idx % speed_factor == 0:\n",
+    "            out.write(frame)\n",
+    "        \n",
+    "        frame_idx += 1\n",
+    "    \n",
+    "    # Release everything\n",
+    "    cap.release()\n",
+    "    out.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "    print(f\"Video processing complete. Saved as {output_path}\")\n",
+    "\n",
+    "# Example usage\n",
+    "input_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/predict/BF_640.mp4\"  # Replace with actual video file path\n",
+    "output_video = \"/home/bohbot/Evyatar/exp/Joni_showoff/predict/BF_640X2.mp4\"  # Output file name\n",
+    "speed_up_video(input_video, output_video)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sp39",
+   "display_name": "super_model",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
