--- a/src/playground/generate_movie_with_unique_labels.ipynb
+++ b/src/playground/generate_movie_with_unique_labels.ipynb
@@ -2,18 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import pandas as pd\n",
+    "from typing import List, Tuple\n",
     "\n",
-    "def create_annotated_video(df: pd.DataFrame, \n",
-    "                           class_label: float,\n",
-    "                           input_video_path: str,\n",
-    "                           output_video_path: str):\n",
-    "\n",
+    "def create_annotated_video(\n",
+    "    df: pd.DataFrame, \n",
+    "    labels_to_show: List[float],\n",
+    "    input_video_path: str,\n",
+    "    output_video_path: str,\n",
+    "    confidence_threshold: float = 0.3\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Creates an annotated video showing bounding boxes and labels for the specified `labels_to_show`.\n",
+    "    \n",
+    "    Args:\n",
+    "        df (pd.DataFrame): DataFrame with columns:\n",
+    "            - image_idx: index of the frame\n",
+    "            - label: class label\n",
+    "            - confidence: detection confidence\n",
+    "            - x, y: bounding box center (in some coordinate system, typically normalized)\n",
+    "            - w, h: bounding box width and height (in the same coordinate system)\n",
+    "        labels_to_show (List[float]): List of labels (classes) to display in the video.\n",
+    "        input_video_path (str): Path to the input video file.\n",
+    "        output_video_path (str): Path to the output (annotated) video file.\n",
+    "        background_color (tuple): BGR color for both the bounding box and text background.\n",
+    "                                  Default is red: (0, 0, 255).\n",
+    "        confidence_threshold (float): Only draw bounding boxes with confidence above this value.\n",
+    "    \"\"\"\n",
     "    \n",
     "    # Initialize video capture from the input file\n",
     "    cap = cv2.VideoCapture(input_video_path)\n",
@@ -26,8 +46,8 @@
     "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "    fps    = cap.get(cv2.CAP_PROP_FPS)\n",
     "    \n",
-    "    # Create video writer\n",
-    "    fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")  # 'mp4v' for MP4 output\n",
+    "    # Create video writer (mp4v is common for .mp4 files)\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*\"mp4v\")\n",
     "    out = cv2.VideoWriter(output_video_path, fourcc, fps, (width, height))\n",
     "    \n",
     "    frame_idx = 0  # We'll match this with df['image_idx']\n",
@@ -37,38 +57,99 @@
     "        if not ret:\n",
     "            break  # We've reached the end of the input video\n",
     "        \n",
-    "        # Filter the DataFrame to bounding boxes for this frame and the desired class\n",
-    "        frame_df = df[(df['image_idx'] == frame_idx) & (df['label'] == class_label)&(df['confidence'] > 0.3)]\n",
+    "        # Filter the DataFrame for bounding boxes in this frame:\n",
+    "        #  - The frame index must match\n",
+    "        #  - The label must be in `labels_to_show`\n",
+    "        #  - The confidence must be above `confidence_threshold`\n",
+    "        frame_df = df[\n",
+    "            (df['image_idx'] == frame_idx) & \n",
+    "            (df['label'].isin(labels_to_show)) & \n",
+    "            (df['confidence'] > confidence_threshold)\n",
+    "        ]\n",
     "        \n",
     "        # Draw the bounding boxes\n",
-    "        for _, row in frame_df.iterrows():                                         \n",
-    "            conf    = row['confidence'] \n",
-    "            x_center = row['x']   # normalized center\n",
-    "            y_center = row['y']   # normalized center\n",
-    "            w_norm   = row['w']   # normalized width\n",
-    "            h_norm   = row['h']   # normalized height                       \n",
+    "        for _, row in frame_df.iterrows():\n",
+    "            label = row['label']\n",
+    "            conf  = row['confidence'] \n",
+    "            \n",
+    "            x_center = row['x']   # e.g. normalized center\n",
+    "            y_center = row['y']   # e.g. normalized center\n",
+    "            w_norm   = row['w']   # e.g. normalized width\n",
+    "            h_norm   = row['h']   # e.g. normalized height\n",
+    "            \n",
+    "            # Convert from \"normalized\" (or custom coords) to pixel coords, if needed\n",
+    "            # (If your df is already in pixel coordinates, remove normalization logic.)\n",
+    "            x1 = int(x_center - w_norm/2)\n",
+    "            y1 = int(y_center - h_norm/2)\n",
+    "            x2 = int(x_center + w_norm/2)\n",
+    "            y2 = int(y_center + h_norm/2)\n",
+    "            \n",
+    "            # Draw bounding box (using `background_color`)\n",
+    "            if label == 2 :\n",
+    "                background_color = (147, 20, 255)  # Pink\n",
+    "                t = \"Female\"\n",
+    "            else:\n",
+    "                background_color = (255, 0, 0)  # Blue\n",
+    "                t = \"Male\"\n",
     "\n",
-    "            # Convert normalized -> pixels\n",
-    "            x1 = int( (x_center - w_norm/2) )\n",
-    "            y1 = int( (y_center - h_norm/2)  )\n",
-    "            x2 = int( (x_center + w_norm/2) )\n",
-    "            y2 = int( (y_center + h_norm/2)  )\n",
+    "            cv2.rectangle(\n",
+    "                frame, \n",
+    "                (x1, y1), \n",
+    "                (x2, y2), \n",
+    "                background_color, \n",
+    "                4\n",
+    "            )\n",
     "            \n",
-    "            # Draw a red rectangle\n",
-    "            cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 0, 255), 4)\n",
+    "            # --- Modified text label with background ---\n",
+    "            text = f\"{t} {conf:.2f}\"\n",
+    "            font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "            font_scale = 0.5\n",
+    "            thickness = 1\n",
     "            \n",
-    "            # Annotation text (bf + confidence)\n",
-    "            text = f\"bf {conf:.2f}\"\n",
-    "            cv2.putText(frame, text, (x1, max(0, y1 - 5)), \n",
-    "                        cv2.FONT_HERSHEY_SIMPLEX, \n",
-    "                        1,  # font scale\n",
-    "                        (0, 0, 255), \n",
-    "                        2,    # line thickness\n",
-    "                        cv2.LINE_AA)\n",
+    "            # Place the label just above the bounding box\n",
+    "            y_label = max(0, y1 - 5)\n",
+    "            \n",
+    "            # 1) Get the text size\n",
+    "            (text_width, text_height), baseline = cv2.getTextSize(\n",
+    "                text, font, font_scale, thickness\n",
+    "            )\n",
+    "            \n",
+    "            # 2) Define the rectangle coordinates for the text background\n",
+    "            rect_x1 = x1\n",
+    "            rect_y1 = y_label - text_height - baseline\n",
+    "            rect_x2 = x1 + text_width\n",
+    "            rect_y2 = y_label\n",
+    "            \n",
+    "            # Clamp coords to ensure we don't go out of frame bounds\n",
+    "            rect_x1 = max(rect_x1, 0)\n",
+    "            rect_y1 = max(rect_y1, 0)\n",
+    "            rect_x2 = min(rect_x2, frame.shape[1])\n",
+    "            rect_y2 = min(rect_y2, frame.shape[0])\n",
+    "            \n",
+    "            # 3) Draw the filled rectangle for the text background\n",
+    "            cv2.rectangle(\n",
+    "                frame,\n",
+    "                (rect_x1, rect_y1),\n",
+    "                (rect_x2, rect_y2),\n",
+    "                background_color,\n",
+    "                cv2.FILLED\n",
+    "            )\n",
+    "            \n",
+    "            # 4) Put the text in white\n",
+    "            cv2.putText(\n",
+    "                frame,\n",
+    "                text,\n",
+    "                (rect_x1, rect_y2 - baseline),\n",
+    "                font,\n",
+    "                font_scale,\n",
+    "                (255, 255, 255),  # White text\n",
+    "                thickness,\n",
+    "                cv2.LINE_AA\n",
+    "            )\n",
+    "            # --- End modified text label ---\n",
     "        \n",
     "        # Write the annotated frame to the output video\n",
     "        out.write(frame)\n",
-    "        \n",
     "        frame_idx += 1\n",
     "    \n",
     "    cap.release()\n",
@@ -78,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Annotated video saved as: /home/bohbot/Evyatar/exp/Joni_showoff/predict/joni.mp4\n"
+      "Annotated video saved as: /home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni.mp4\n"
      ]
     }
    ],
@@ -93,14 +174,14 @@
     "import pandas as pd\n",
     "\n",
     "# First load the CSV file into a DataFrame\n",
-    "df = pd.read_csv(\"/home/bohbot/Evyatar/exp/Joni_showoff/predict/results.csv\")\n",
+    "df = pd.read_csv(\"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/predict/results.csv\")\n",
     "\n",
     "# Then call your function, passing the actual DataFrame (df)\n",
     "create_annotated_video(\n",
     "    df,                       # <-- pass the DataFrame, not the CSV path\n",
-    "    1,                        # class_label\n",
-    "    \"/home/bohbot/Evyatar/exp/Joni_showoff/full movies/bf.mp4\", \n",
-    "    \"/home/bohbot/Evyatar/exp/Joni_showoff/predict/joni.mp4\"\n",
+    "    labels_to_show=[1, 2],                        # class_label\n",
+    "    input_video_path = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/2024-01-29_16-22-42_cam1_cropped_b.mp4\", \n",
+    "    output_video_path = \"/home/bohbot/Evyatar/exp/Joni_showoff/nectar/joni.mp4\"\n",
     ")\n"
    ]
   },
