modified the main, check if works with sahi

--- a/src/playground/downscale_vid.ipynb
+++ b/src/playground/downscale_vid.ipynb
@@ -143,6 +143,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = \"/home/bohbot/Evyatar/exp/Joni_showoff/predict/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "xx = os.path.isdir(x)\n",
+    "xx"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
